--- a/Web 2/index.html
+++ b/Web 2/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Gotta Go Faster Society</title>
+        <title>Alcoholus Society</title>
     </head>
 
     <body>
